<resources>
    <string name="app_name" translatable="false">MyRLGarage</string>
    <string name="trail">Trail</string>
    <string name="rocket_boost">Rocket Boost</string>
    <string name="wheels">Wheels</string>
    <string name="accent_color_paint_finish">Accent Color / Paint Finish</string>
    <string name="primary_color_paint_finish">Primary Color / Paint Finish</string>
    <string name="decal">Decal</string>
    <string name="body">Body</string>
    <string name="orange_blue_team">Orange/Blue Team</string>
    <string name="preset_name">Preset Name</string>
    <string name="add_new_preset">Add New Preset</string>
    <string name="presets">Presets</string>
    <string name="get_started_with_your_very_own_rl_garage">Get started with your very own RL Garage</string>
    <string name="example_email_com">example@email.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="sign_up">Sign up</string>
</resources>