<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    android:gravity="center"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeText"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/secondary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/formLayout"
        android:layout_below="@id/welcomeText"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailEditText"
            android:inputType="textEmailAddress"
            android:hint="@string/example_email_com"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordEditText"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/loginBtn"
            android:layout_height="64dp"
            android:text="@string/log_in"
            android:backgroundTint="@color/secondary"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            />

        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:indeterminateTint="@color/secondary"
            android:visibility="gone"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/formLayout"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/tertiary"
            android:id="@+id/signupTextViewBtn"
            android:text="@string/sign_up"/>
    </LinearLayout>

</RelativeLayout>